Remove auto-generated footer and dates from stages

--- a/public/en/lofiradio/index.html
+++ b/public/en/lofiradio/index.html
@@ -306,7 +306,7 @@
         
         <div class="stage-section" style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 40px;"><h3 style="margin-top: 0;">Table of Contents</h3><ul style="list-style: none; padding-left: 0;"><li style="margin-bottom: 10px;"><a href="#stage-0" style="color: #2c3e50; text-decoration: none; border-bottom: 1px solid #3498db; padding-bottom: 2px;">Stage 1: Basic Player Creation</a></li><li style="margin-bottom: 10px;"><a href="#stage-1" style="color: #2c3e50; text-decoration: none; border-bottom: 1px solid #3498db; padding-bottom: 2px;">Stage 2: Adding Control Features</a></li></ul></div>
         
-        <div class="stage" id="stage-0"><div class="stage-header"><div class="stage-date">2025-01-08</div><h2 class="stage-title">Stage 1: Basic Player Creation</h2></div><div class="stage-section"><h3>What was needed</h3><p>Needed a simple solution for listening to lofi music without ads and delays.</p>
+        <div class="stage" id="stage-0"><div class="stage-header"><h2 class="stage-title">Stage 1: Basic Player Creation</h2></div><div class="stage-section"><h3>What was needed</h3><p>Needed a simple solution for listening to lofi music without ads and delays.</p>
 </div><div class="stage-section"><h3>Solution</h3><p>Created a simple web player with local MP3 files instead of streams.</p>
 </div><div class="stage-section"><h3>Why this solution</h3><ul>
 <li>Local files load instantly (no delays)</li>
@@ -329,7 +329,7 @@
 <li>GitHub doesn&#39;t accept files &gt;100MB (had to exclude one large track)</li>
 <li>Need local server for development (due to CORS when opening via file://)</li>
 </ul>
-</div><div class="stage-section"><h3>What was done</h3><ul class="what-done-list"><li>Created HTML5 Audio player</li><li>Added local MP3 files</li><li>Implemented Play/Pause button</li><li>Configured automatic track loading</li></ul></div></div><div class="stage" id="stage-1"><div class="stage-header"><div class="stage-date">2025-01-08</div><div style="margin-bottom: 10px; font-size: 0.9em;"><a href="#stage-0" style="color: #3498db; text-decoration: none; border-bottom: 1px solid #3498db;">← Previous stage: Stage 1: Basic Player Creation</a></div><h2 class="stage-title">Stage 2: Adding Control Features</h2></div><div class="stage-section"><h3>What was needed</h3><p>The basic player worked, but lacked convenient controls.</p>
+</div><div class="stage-section"><h3>What was done</h3><ul class="what-done-list"><li>Created HTML5 Audio player</li><li>Added local MP3 files</li><li>Implemented Play/Pause button</li><li>Configured automatic track loading</li></ul></div></div><div class="stage" id="stage-1"><div class="stage-header"><div style="margin-bottom: 10px; font-size: 0.9em;"><a href="#stage-0" style="color: #3498db; text-decoration: none; border-bottom: 1px solid #3498db;">← Previous stage: Stage 1: Basic Player Creation</a></div><h2 class="stage-title">Stage 2: Adding Control Features</h2></div><div class="stage-section"><h3>What was needed</h3><p>The basic player worked, but lacked convenient controls.</p>
 </div><div class="stage-section"><h3>Solution</h3><p>Added:</p>
 <ul>
 <li>Previous/next track buttons</li>
