--- a/public/ru/lofiradio/index.html
+++ b/public/ru/lofiradio/index.html
@@ -306,7 +306,7 @@
         
         <div class="stage-section" style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 40px;"><h3 style="margin-top: 0;">Оглавление</h3><ul style="list-style: none; padding-left: 0;"><li style="margin-bottom: 10px;"><a href="#stage-0" style="color: #2c3e50; text-decoration: none; border-bottom: 1px solid #3498db; padding-bottom: 2px;">Создание базового функционала</a></li><li style="margin-bottom: 10px;"><a href="#stage-1" style="color: #2c3e50; text-decoration: none; border-bottom: 1px solid #3498db; padding-bottom: 2px;">Добавление функций управления</a></li></ul></div>
         
-        <div class="stage" id="stage-0"><div class="stage-header"><div class="stage-date">2025-01-08</div><h2 class="stage-title">Создание базового функционала</h2></div><div class="stage-section"><h3>Что было</h3><p>Нужно было создать простое решение для прослушивания lofi музыки без рекламы и задержек.</p>
+        <div class="stage" id="stage-0"><div class="stage-header"><h2 class="stage-title">Создание базового функционала</h2></div><div class="stage-section"><h3>Что было</h3><p>Нужно было создать простое решение для прослушивания lofi музыки без рекламы и задержек.</p>
 </div><div class="stage-section"><h3>Решение</h3><p>Создан простой веб-плеер с локальными MP3 файлами вместо стримов.</p>
 </div><div class="stage-section"><h3>Почему такое решение</h3><ul>
 <li>Локальные файлы загружаются мгновенно (без задержек)</li>
@@ -325,7 +325,7 @@
 <li>❌ Нужно хранить файлы (но 5-10 треков это нормально)</li>
 <li>❌ Ограниченный набор треков (но можно добавлять)</li>
 </ul>
-</div><div class="stage-section"><h3>Что сделано</h3><ul class="what-done-list"><li>Создан HTML5 Audio плеер</li><li>Добавлены локальные MP3 файлы</li><li>Реализована кнопка Play/Pause</li><li>Настроена автоматическая загрузка треков</li></ul></div></div><div class="stage" id="stage-1"><div class="stage-header"><div class="stage-date">2025-01-08</div><div style="margin-bottom: 10px; font-size: 0.9em;"><a href="#stage-0" style="color: #3498db; text-decoration: none; border-bottom: 1px solid #3498db;">← Предыдущий этап: Создание базового функционала</a></div><h2 class="stage-title">Добавление функций управления</h2></div><div class="stage-section"><h3>Что было</h3><p>Базовый плеер работал, но не хватало удобства управления.</p>
+</div><div class="stage-section"><h3>Что сделано</h3><ul class="what-done-list"><li>Создан HTML5 Audio плеер</li><li>Добавлены локальные MP3 файлы</li><li>Реализована кнопка Play/Pause</li><li>Настроена автоматическая загрузка треков</li></ul></div></div><div class="stage" id="stage-1"><div class="stage-header"><div style="margin-bottom: 10px; font-size: 0.9em;"><a href="#stage-0" style="color: #3498db; text-decoration: none; border-bottom: 1px solid #3498db;">← Предыдущий этап: Создание базового функционала</a></div><h2 class="stage-title">Добавление функций управления</h2></div><div class="stage-section"><h3>Что было</h3><p>Базовый плеер работал, но не хватало удобства управления.</p>
 </div><div class="stage-section"><h3>Решение</h3><p>Добавлены:</p>
 <ul>
 <li>Кнопки предыдущий/следующий трек</li>
