Fix duplicate project link on first stage

--- a/public/en/printacopy/index.html
+++ b/public/en/printacopy/index.html
@@ -306,7 +306,7 @@
         
         <div class="stage-section" style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 40px;"><h3 style="margin-top: 0;">Table of Contents</h3><ul style="list-style: none; padding-left: 0;"><li style="margin-bottom: 10px;"><a href="#stage-0" style="color: #2c3e50; text-decoration: none; border-bottom: 1px solid #3498db; padding-bottom: 2px;">Stage 2: Email Integration and Additional Features</a></li><li style="margin-bottom: 10px;"><a href="#stage-1" style="color: #2c3e50; text-decoration: none; border-bottom: 1px solid #3498db; padding-bottom: 2px;">Stage 1: Creating Static Landing Page</a></li></ul></div>
         
-        <div class="stage" id="stage-0"><div class="stage-header"><div style="margin-bottom: 15px; padding: 12px; background: #e8f4f8; border-left: 4px solid #3498db; border-radius: 4px;"><strong style="color: #2c3e50;">Working version:</strong> <a href="https://printacopy.pages.dev" target="_blank" rel="noopener noreferrer" style="color: #3498db; text-decoration: none; border-bottom: 1px solid #3498db; font-weight: 500;">View project printacopy</a></div><h2 class="stage-title">Stage 2: Email Integration and Additional Features</h2></div><div class="stage-section"><h3>What was needed</h3><p>After creating basic landing page, needed to add:</p>
+        <div class="stage" id="stage-0"><div class="stage-header"><h2 class="stage-title">Stage 2: Email Integration and Additional Features</h2></div><div class="stage-section"><h3>What was needed</h3><p>After creating basic landing page, needed to add:</p>
 <ul>
 <li>Multilingual support (Russian, English, German)</li>
 <li>City autocomplete</li>
