--- a/public/en/index.html
+++ b/public/en/index.html
@@ -7,7 +7,9 @@
     <title>#codengo - Development Diary</title>
     <meta name="description" content="IQ Test Online - Быстрый IQ тест  О проекте  Проект представляет собой быстрый онлайн "IQ" тест, который позволяет пользователям получить примерную оценку с">
     <meta name="keywords" content="#codengo, development, development diary, стартап">
-    
+    <link rel="canonical" href="https://iqtest-1id.pages.dev">
+    <meta property="og:url" content="https://iqtest-1id.pages.dev">
+    <meta name="twitter:url" content="https://iqtest-1id.pages.dev">
     <style>
         * {
             margin: 0;
