--- a/public/ru/printacopy/index.html
+++ b/public/ru/printacopy/index.html
@@ -300,7 +300,7 @@
         
         <div class="stage-section" style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 40px;"><h3 style="margin-top: 0;">Оглавление</h3><ul style="list-style: none; padding-left: 0;"><li style="margin-bottom: 10px;"><a href="#stage-0" style="color: #2c3e50; text-decoration: none; border-bottom: 1px solid #3498db; padding-bottom: 2px;">Интеграция email и дополнительные функции</a></li><li style="margin-bottom: 10px;"><a href="#stage-1" style="color: #2c3e50; text-decoration: none; border-bottom: 1px solid #3498db; padding-bottom: 2px;">Создание статического лендинга</a></li></ul></div>
         
-        <div class="stage" id="stage-0"><div class="stage-header"><div style="margin-bottom: 15px; padding: 12px; background: #e8f4f8; border-left: 4px solid #3498db; border-radius: 4px;"><strong style="color: #2c3e50;">Рабочая версия:</strong> <a href="https://printacopy.pages.dev" target="_blank" rel="noopener noreferrer" style="color: #3498db; text-decoration: none; border-bottom: 1px solid #3498db; font-weight: 500;">Посмотреть проект printacopy</a></div><h2 class="stage-title">Интеграция email и дополнительные функции</h2></div><div class="stage-section"><h3>Что было</h3><p>После создания базового лендинга нужно было добавить:</p>
+        <div class="stage" id="stage-0"><div class="stage-header"><h2 class="stage-title">Интеграция email и дополнительные функции</h2></div><div class="stage-section"><h3>Что было</h3><p>После создания базового лендинга нужно было добавить:</p>
 <ul>
 <li>Многоязычность (русский, английский, немецкий)</li>
 <li>Автодополнение городов</li>
